--- a/music/views/index.ejs
+++ b/music/views/index.ejs
@@ -7,8 +7,12 @@
   <body>
     <header>
       <h1><%= title %></h1>
+      <ul class="type" id="type">
+        <li data-type="dot">Dot</li>
+        <li data-type="column" class="selected">Column</li>
+      </ul>
       <p>
-        Valume <input id="volume" type="range" min="0" max="100" value="60">
+        Volume <input id="volume" type="range" min="0" max="100" value="60">
       </p>
     </header>
     <div class="left">
@@ -19,7 +23,8 @@
 
       </ul>
     </div>
-    <div class="right"></div>
+    <div class="right" id="box"></div>
+    <script type="text/javascript" src="/javascripts/MusicVisualizer.js"></script>
     <script type="text/javascript" src="/javascripts/index.js"></script>
   </body>
 </html>
